sorted the overflow issue and added the hambuger menu

--- a/css/general.css
+++ b/css/general.css
@@ -63,6 +63,8 @@ Medium: 11px
 }
 
 html {
+  width: 100%;
+  overflow-x: hidden;
   /* font-size: 10px; */
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
@@ -74,6 +76,7 @@ body {
   background: #fff;
   width: 100%;
   position: relative;
+  overflow-x: hidden;
 }
 
 
